<resources>
    <string name="app_name">FastFruit</string>
    <string name="file_preferencia">dgtic.unam.autentifiacion.PREFERENCE_FILE_KEY</string>
    <string name="autor">Por: Kevin Hernandez</string>
    <string name="version">Version 1.0.0</string>
    <string name="mensaje_inicio">Bienvenido!</string>
    <string name="frase">Ahorra y disFruta:</string>
    <string name="user">user</string>
    <string name="fondo">fondo</string>
    <string name="categoria">Categoría:</string>
    <string name="todo">Todo:</string>
    <string name="unidad">p/kg</string>
    <string name="direc_nueva">Agregar una nueva dirección...</string>
    <string name="unidad2">kg</string>
    <string-array name="categorias">
        <item>Todas</item>
        <item>Likes</item>
        <item>Frutas</item>
        <item>Verduras</item>
        <item>Otros</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_signup_alt">Crea cuenta</string>
    <string name="btn_login">Inicia sesión</string>
    <string name="input_password">Contraseña</string>
    <string name="input_email">Email</string>
    <string name="view_title_login">Bienvenido</string>
    <string name="view_title_signup">Crear cuenta</string>
    <string name="ht_email">Ejemplo: lalala@xmail.com</string>
    <string name="ht_password">La contraseña no es valida</string>
    <string name="btn_signup">Crear cuenta</string>
    <string name="btn_login_alt">Inicia sesión</string>
    <string name="direcciones">Direcciones:</string>
    <string name="ejemplocorreo">lalalalal@xmail.com</string>
    <string name="e_mailtv">E-mail:</string>
    <string name="nombretv">Nombre:</string>
    <string name="nombreejemplo">LoremIpsum</string>
    <string name="agregarbtn">Agregar</string>
    <string name="userimageejemplo">userimage</string>
    <string name="carritoimagen">carrito</string>
    <string name="carritotitle">Carrito</string>
    <string name="total">total</string>
    <string name="totaltv">Total:</string>
    <string name="comprarbtn">Comprar</string>
    <string name="spiner_perron">categorias</string>
    <string name="logo">Logo</string>
    <string name="Precio">$6.05</string>
    <string name="NombreProducto">Tomate</string>
    <string name="imagenfood">imagenfood</string>
    <string name="likebtn">likebtn</string>
    <string name="adbtn">adbtn</string>
    <string name="lessbtn">lessbtn</string>
    <string name="cantidad">Cantidad</string>
    <string name="cantidad1">1</string>
    <string name="direc">TextView</string>
</resources>