<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardCornerRadius="15dp"
    android:elevation="5dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="88dp">


        <ImageView
            android:id="@+id/food_image1"
            android:layout_width="83dp"
            android:layout_height="66dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imagenfood"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.272"
            app:srcCompat="@drawable/tomate"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/price2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:fontFamily="@font/semibold"
            android:text="@string/Precio"
            android:textColor="#FF6813"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/food_image1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.544"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/restaurant_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/okemo"
            android:text="@string/NombreProducto"
            android:textColor="#F06941"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/price2"
            app:layout_constraintEnd_toStartOf="@+id/add_button"
            app:layout_constraintHorizontal_bias="0.095"
            app:layout_constraintStart_toEndOf="@+id/food_image1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.625"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tvcant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/okemo"
            android:text="@string/cantidad"
            android:textColor="#F06941"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tvCantidad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/circular_button"
            android:contentDescription="@string/adbtn"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.526"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/add_button2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="93dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/circular_button"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_less"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/price2"
            app:layout_constraintStart_toStartOf="@+id/food_image1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.526"
            tools:ignore="SpeakableTextPresentCheck"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/unidad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/price2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/unidad2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/cantidad1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/add_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.475" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
